--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-        <div class="container">
+    <div class="container">
+        <div class="board">
             <div>
                 <h3>HOME</h3>
                 <div id="home-score">
@@ -30,10 +31,11 @@
                     <button id="three-btn" onclick="plusThreeGuest()">+3</button>
                 </div>
             </div>
+        </div>
             <div id="new-game">
                 <button id="new-btn" onclick="newGame()">New Game</button>
             </div>
-        </div>
+    </div>
         <script src="index.js"></script>
 </body>
 </html>
